animate scroll out

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
     <span class="sr-only">Scroll to top</span>
   </a>
 
-  <app-footer-component></app-footer-component>
+  <app-footer-component #footer></app-footer-component>
 
-  <app-cookie-banner></app-cookie-banner>
+  <app-cookie-banner [hide]="hideCookie"></app-cookie-banner>
 </div>
