--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" ngClass="{'footer--hide': hide}">
     <div class="container-fluid">
       <blockquote class="text-center">
         <q>You've made it to the bottom!</q>
