add prompts everywhere

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -108,5 +108,7 @@
 
       <strong>Registration number: 11769481</strong>
     </section>
+
+    <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
