--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -29,7 +29,7 @@
           </div>
           <div class="media-body media-bottom">
             <h3 class="media-heading">Samuel Gregory</h3>
-            - Founder <br>
+            - CEO/Founder <br>
             <a href="mailto:samuel@jupiterandthegiraffe.com">samuel@jupiterandthegiraffe.com</a>
           </div>
         </div>
@@ -47,5 +47,7 @@
         </div>
       </div>
     </div>
+
+    <app-get-in-touch></app-get-in-touch>
     </section>
 </div>
