--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,13 +9,13 @@
     <section class="home__about-who section">
       <header>
         <h2>
-          <span data-aos="fade-up">Who are Jupiter <br>and the Giraffe?</span>
+          <span data-aos="fade-up">Who are Jupiter <span class="home__title-break">and the Giraffe?</span></span>
         </h2>
       </header>
 
       <p>Jupiter and the Giraffe are a not-so-ordinary branding agency. We love all things digital to the moon and back.</p>
 
-      <a href="" [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
+      <a [routerLink]="['/who-we-are']">Read more</a><app-dots-component></app-dots-component>
     </section>
 
     <section class="section">
@@ -26,8 +26,9 @@
       </header>
 
       <p>
-        We care about your brand as much as you do, we have experience in logo design and corporate identity. To finish
-        it off, we can build you a kickass website to go with it.
+        We care about your brand as much as you do, we have experience in logo design, website design, app design,
+        branding and identity. We can help you build a brand that wows and to finish it off, build you a kick-ass website
+        to go with it.
       </p>
 
       <a href="" [routerLink]="['/what-we-do']">
@@ -47,14 +48,18 @@
         <div class="row">
           <article *ngFor="let blog of blogs;"  class="home__blog col-md">
             <header>
-              <h3>
-                <a [href]="blog.blog.link" class="home__blog-title-link">{{blog.blog.title.rendered}}</a>
+              <h3 class="home__blog-title">
+                <a [href]="blog.blog.link" class="home__blog-title-link" [innerHTML]="blog.blog.title.rendered"></a>
               </h3>
             </header>
 
             <a [href]="blog.blog.link" class="home__blog-image-link">
+              <span class="sr-only">{{blog.blog.title.rendered}}</span>
+
               <div class="home__blog-image" *ngIf="blog.image.source_url" [ngStyle]="{'background-image': 'url(' + blog.image.source_url + ')'}">
-                <span class="home__blog-tag" aria-hidden="false">Category: {{blog.category.name}}</span>
+                <span class="home__blog-tag home__blog-tag--development" aria-hidden="false" *ngIf="blog.category.slug === 'development'">Category: {{blog.category.name}}</span>
+                <span class="home__blog-tag home__blog-tag--design" aria-hidden="false" *ngIf="blog.category.slug === 'design'">Category: {{blog.category.name}}</span>
+                <span class="home__blog-tag home__blog-tag--business" aria-hidden="false" *ngIf="blog.category.slug === 'business'">Category: {{blog.category.name}}</span>
               </div>
             </a>
 
