--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -6,15 +6,41 @@
 
     <section>
       <header>
-        <h2>Branding</h2>
+        <h2>Strategy</h2>
       </header>
 
-      <p>
-        Like you, we believe brand aesthetics are the most important thing.
+      <p class="what-we-do--tagline">
+        Strategy is an essential part to our process, no matter what stage you're at. We'll help clarify your purpose,
+        understand your users and define your goals.
       </p>
 
       <p>
-        You need something engaging, unique and most importantly you! Investing in your brand will get results by building
+        This stage in the project gives us the opportunity to delve deeper into your pain points to better understand
+        your problems and pain points. We encourage you to dig deep and think about your audience and build user profiles,
+        think about your company and where you want to position it and seek your competitors to get the upper hand.
+      </p>
+
+      <p>
+        What comes out of this is a fully flegded plan of action where everyone is clear and fully envolved.
+      </p>
+
+      <p>
+        <a [routerLink]="['/contact']">Talk to us</a> if your brand needs a fresh new pair of trainers.
+      </p>
+    </section>
+
+    <section>
+      <header>
+        <h2>Branding</h2>
+      </header>
+
+      <p class="what-we-do--tagline">
+        Like you, we believe brand aesthetics are the most important thing.
+        You need something engaging, unique and most importantly you!
+      </p>
+
+      <p>
+        Investing in your brand will get results by building
         confidence in your customers with an easily recognisable and relatable aesthetic. We want to give you something
         that will scale and grow along with your company's ambitions and ultimate success.
       </p>
@@ -37,8 +63,8 @@
         <h2>Design</h2>
       </header>
 
-      <p>
-        We've done websites, we've done apps. We've got what it takes to design you a website
+      <p class="what-we-do--tagline">
+        We've done websites, we've done apps. We've got what it takes to design you something
         that shines.
       </p>
 
@@ -55,16 +81,16 @@
 
     <section class="section">
       <header>
-        <h2>Websites</h2>
+        <h2>Website build</h2>
       </header>
-        <p>
-          You know your website must stand out.
-          We’re here to take your brand and build an online experience that turns heads.
+
+        <p class="what-we-do--tagline">
           We pride ourselves in writing clean, maintainable code on a platform you can trust using the latest technologies.
-          We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all. We have your users in mind.
         </p>
 
         <p>
+          We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all.
+          We have your users in mind.
           It's no good if you have the perfect website if knowbody knows about it. We build with search engines in mind
           so you can be confident your users can easily find you.
         </p>
@@ -78,5 +104,7 @@
           Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">Give us a shout</a>!
         </p>
     </section>
+
+    <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
