--- a/src/app/what/what.component.scss
+++ b/src/app/what/what.component.scss
@@ -9,4 +9,15 @@
   a {
     color: $color-oldBrick;
   }
+
+  &--tagline {
+    @include font-size($heading-2-mobile);
+    font-style: italic;
+    margin: $space-large 0;
+
+    @include md {
+      @include font-size($heading-2);
+      margin: $space-xlrg 0;
+    }
+  }
 }
