--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -29,7 +29,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section">
       <header>
         <h2>Branding</h2>
       </header>
