--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -25,7 +25,7 @@
       </p>
 
       <p>
-        <a [routerLink]="['/contact']">Talk to us</a> if your brand needs a fresh new pair of trainers.
+        <a [routerLink]="['/contact']">Let's figure it out</a> together.
       </p>
     </section>
 
