Feature/content update (#44)
* add prompts everywhere

* remove number

* remove wasp

* update tests

* update services

* update style

* text update

--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -29,7 +29,7 @@
           </div>
           <div class="media-body media-bottom">
             <h3 class="media-heading" itemprop="name">Samuel Gregory</h3>
-            <span itemprop="jobTitle">- Founder</span> <br>
+            <span itemprop="jobTitle">- CEO/Founder</span> <br>
             <a href="mailto:samuel@jupiterandthegiraffe.com" itemprop="email">samuel@jupiterandthegiraffe.com</a>
           </div>
         </div>
@@ -47,5 +47,7 @@
         </div>
       </div>
     </div>
+
+    <app-get-in-touch></app-get-in-touch>
     </section>
 </div>
