space on blogs on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -78,4 +78,16 @@
       display: block;
     }
   }
+
+  &__blog {
+    margin-top: $space-large;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    @include md {
+      margin-top: 0;
+    }
+  }
 }
