break out all the pages

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-md-4 footer__menu">
           <div class="pull-right">
-            © {{ today | date:'yyyy' }} Jupiter and the Giraffe
+            © {{ today | date:'yyyy' }} Jupiter and the Giraffe Ltd.
           </div>
         </div>
       </div>
