--- a/src/app/what/what.component.html
+++ b/src/app/what/what.component.html
@@ -15,17 +15,7 @@
       </p>
 
       <p>
-        This stage in the project gives us the opportunity to delve deeper into your pain points to better understand
-        your problems and pain points. We encourage you to dig deep and think about your audience and build user profiles,
-        think about your company and where you want to position it and seek your competitors to get the upper hand.
-      </p>
-
-      <p>
-        What comes out of this is a fully flegded plan of action where everyone is clear and fully envolved.
-      </p>
-
-      <p>
-        <a [routerLink]="['/contact']">Let's figure it out</a> together.
+        Find out more about <a [routerLink]="['/service/strategy']">Strategy service</a>.
       </p>
     </section>
 
@@ -40,21 +30,7 @@
       </p>
 
       <p>
-        Investing in your brand will get results by building
-        confidence in your customers with an easily recognisable and relatable aesthetic. We want to give you something
-        that will scale and grow along with your company's ambitions and ultimate success.
-      </p>
-
-      <p>
-        We work tirelessly with you to think about the "what's", "who's", "where's" and "when's"
-        when it comes to your audience to help sculpt the perfect brand.
-        We’re all about engaging your audience through a jaw-dropping logo, wicked typography,
-        striking colours and a resonating tone of voice along with a strategy that will stick.
-        We're not messing around.
-      </p>
-
-      <p>
-        <a [routerLink]="['/contact']">Talk to us</a> if your brand needs a fresh new pair of trainers.
+        Find out about <a [routerLink]="['/service/branding']">branding service</a>.
       </p>
     </section>
 
@@ -69,13 +45,7 @@
       </p>
 
       <p>
-        Extending from your brand, we take every aspect of who your users are and we'll
-        design you something that far exceeds what they expect. We'll expand what you thought was
-        possible and open your eyes to breath-taking design through composition, contrast, colour and experience.
-      </p>
-
-      <p>
-        <a [routerLink]="['/contact']">Let us know</a> so we can inspire you.
+        Find out more about <a [routerLink]="['/serivce/design']">design service</a>.
       </p>
     </section>
 
@@ -89,19 +59,7 @@
         </p>
 
         <p>
-          We’re confident we can build the site you need, using elegant user experience (UX) and making it accessible to all.
-          We have your users in mind.
-          It's no good if you have the perfect website if knowbody knows about it. We build with search engines in mind
-          so you can be confident your users can easily find you.
-        </p>
-
-        <p>
-          We have years of experience in the industry, using technologies such as React,
-          Angular and Vue or building brochure sites to complete eCommerce and Wordpress systems or Shopify themes.
-        </p>
-
-        <p>
-          Whatever your challenge, we'd love to talk to you about it so <a [routerLink]="['/contact']">Give us a shout</a>!
+          Find out about our <a [routerLink]="['/service/webdevelopment']">web development service</a>.
         </p>
     </section>
 
