update all the content

--- a/src/app/global/get-in-touch/get-in-touch.component.scss
+++ b/src/app/global/get-in-touch/get-in-touch.component.scss
@@ -1,5 +1,5 @@
-@import "../../assets/sass/settings/settings";
-@import "../../assets/sass/tools/tools";
+@import "../../../assets/sass/settings/settings";
+@import "../../../assets/sass/tools/tools";
 
 .get-in-touch {
   margin-top: 100px;
