--- a/src/app/misc/location/location.component.html
+++ b/src/app/misc/location/location.component.html
@@ -7,7 +7,7 @@
     </p>
 
     <p>
-      We bring all our services to {{location}}, be it <a [routerLink]="['webdevelopment']" class="link-plain">web development</a>,
+      We bring all our services to {{location}}, be it <a [routerLink]="['web-development']" class="link-plain">web development</a>,
       <a [routerLink]="['branding']" class="link-plain">branding</a> or <a [routerLink]="['design']" class="link-plain">design</a>.
       As always we will start with a <a [routerLink]="['strategy']" class="link-plain">strategy workshop</a>
       and build out your needs and solutions to your problems.
