--- a/src/app/misc/typography/typography.component.html
+++ b/src/app/misc/typography/typography.component.html
@@ -3,15 +3,8 @@
     <h1>Typography</h1>
 
     <p>
-      Typography is a core part of the design. Without the perfect font pairings your website design can flop. There
-      are many free services like <a href="https://fonts.google.com/" nofollow="" noreferrer="">Google Web Fonts</a> that
-      allow you to explore the many web fonts that are out there. There are even some machine learning tools that will try
-      and pair fonts based on some questions. Try <a href="https://fontjoy.com/" nofollow noreferrer>Font Joy</a>.
-    </p>
-
-    <p>
-      As part of our <a [routerLink]="['/service/design']">design</a> or <a [routerLink]="['/service/branding']">branding</a>
-      packages, we always pay particular attention to the fonts we use.
+      The right font choice is crucial to your brand as it's a key visual element to anything you produce.
+      We take so much into account when choosing you a typeface and combination type.
     </p>
 
     <app-get-in-touch></app-get-in-touch>
