--- a/src/app/misc/wordpress/wordpress.component.html
+++ b/src/app/misc/wordpress/wordpress.component.html
@@ -1,3 +1,21 @@
-<p>
-  wordpress works!
-</p>
+<div class="white-bg">
+  <section class="container-fluid">
+    <h1>Wordpress</h1>
+
+    <p>
+      Wordpress is our go-to <a [routerLink]="['cms']">CMS</a>. It's a powerful content management tool that has a variety of applications.
+      What was once a blogging platform is now a very powerful website tool with lots of support and functionality.
+    </p>
+
+    <p>
+      We've used Wordpress on many of our website because of it's simple to use interface that many of our clients have had experience in.
+      It can even be used to build eCommerce websites so its versatility should not be undermined.
+    </p>
+
+    <p>
+      Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Wordpress.
+    </p>
+
+    <app-get-in-touch></app-get-in-touch>
+  </section>
+</div>
