--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -1,7 +1,7 @@
-<div class="what-we-do">
+<div class="white-bg">
   <section class="container-fluid">
     <header>
-      <h1>Strategy</h1>
+      <h1>Design</h1>
     </header>
 
     <p>
@@ -9,5 +9,7 @@
       design you something that far exceeds what they expect. We'll expand what you thought was
       possible and open your eyes to breath-taking design through composition, contrast, colour and experience.
     </p>
+
+    <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
