--- a/src/app/pages/what/what.component.html
+++ b/src/app/pages/what/what.component.html
@@ -45,7 +45,7 @@
       </p>
 
       <p>
-        Find out more about <a [routerLink]="['/serivce/design']">design service</a>.
+        Find out more about <a [routerLink]="['/service/design']">design service</a>.
       </p>
     </section>
 
@@ -59,7 +59,7 @@
         </p>
 
         <p>
-          Find out about our <a [routerLink]="['/service/webdevelopment']">web development service</a>.
+          Find out about our <a [routerLink]="['/service/web-development']">web development service</a>.
         </p>
     </section>
 
