--- a/src/app/misc/angular/angular.component.html
+++ b/src/app/misc/angular/angular.component.html
@@ -1,3 +1,23 @@
-<p>
-  angular works!
-</p>
+<div class="white-bg">
+  <section class="container-fluid">
+    <h1>Angular</h1>
+
+    <p>
+      Angular takes many names (Angular 2+, Angular version 2 and above). The reason for this is that the Angular team
+      make a stark departure to how Angular v1 was built an so the distinction needs to be made what version is being used
+      particularly in the dev community as the skillsets are quite varied. Jupiter and the Giraffe has experience in both
+      versions but we prefer V2. Our own website was built in it.
+    </p>
+
+    <p>
+      <a href="https://angular.io/" nofollow noreferrer>Angular</a> is a Typescript-based framework built by Google. Its use is for building component-based front-end applications for the web.
+      Similar to that of <a [routerLink]="['web-development/vue']">Vue</a>, Angular is a larger library that has all its tools 'out of the box'.
+    </p>
+
+    <p>
+      Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Angular.
+    </p>
+
+    <app-get-in-touch></app-get-in-touch>
+  </section>
+</div>
