--- a/src/app/misc/tone-of-voice/tone-of-voice.component.html
+++ b/src/app/misc/tone-of-voice/tone-of-voice.component.html
@@ -1,3 +1,22 @@
-<p>
-  tone-of-voice works!
-</p>
+<div class="white-bg">
+  <section class="container-fluid">
+    <h1>Tone of Voice</h1>
+
+    <p>
+      Simply put, tone of voice is the personality of anything your company says. This can range for excitable to serious.
+      Jupiter and the Giraffes tone of voice, for instance, is casual, quirky and personable (now you can't unsee it, right?)
+    </p>
+
+    <p>
+      We help you understand your tone on voice during your <a [routerLink]="['/service/strategy']">Strategy</a> workshop.
+      From this we outline areas in which your tone of voice can shine.
+    </p>
+
+    <p>
+      Tone of voice is not always something that is said or written. Tone should be considered in all aspects of your brand
+      down to even the typography we choose. A very powerful tool.
+    </p>
+
+    <app-get-in-touch></app-get-in-touch>
+  </section>
+</div>
