--- a/src/app/pages/branding/branding.component.html
+++ b/src/app/pages/branding/branding.component.html
@@ -1,4 +1,4 @@
-<div class="what-we-do">
+<div class="white-bg">
   <section class="container-fluid">
     <header>
       <h1>Branding</h1>
@@ -13,9 +13,15 @@
     <p>
       We work tirelessly with you to think about the "what's", "who's", "where's" and "when's"
       when it comes to your audience to help sculpt the perfect brand.
-      We’re all about engaging your audience through a jaw-dropping logo, wicked typography,
-      striking colours and a resonating tone of voice along with a strategy that will stick.
+      We’re all about engaging your audience through a jaw-dropping logo, wicked <a [routerLink]="['/brand/typography']">typography</a>,
+      striking colours and a resonating <a [routerLink]="['/brand/tone-of-voice']">tone of voice</a> along with a strategy that will stick.
       We're not messing around.
+    </p>
+
+    <p>
+      We also work with you to understand and highlight your <a [routerLink]="['/brand/messaging']">brand messaging</a>,
+      and use <a [routerLink]="['/brand/photography']">photography</a>, iconography and animation to compose all these
+      elements together to build your perfect brand.
     </p>
 
     <app-get-in-touch></app-get-in-touch>
