add call to actions

--- a/src/app/misc/angular/angular.component.html
+++ b/src/app/misc/angular/angular.component.html
@@ -18,6 +18,10 @@
       Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Angular.
     </p>
 
+    <p>
+      If you're interested in building an Angular application with us, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
