--- a/src/app/misc/ecommerce/ecommerce.component.html
+++ b/src/app/misc/ecommerce/ecommerce.component.html
@@ -78,6 +78,10 @@
       </li>
     </ol>
 
+    <p>
+      If you're interested in building an ecommerce application with us, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
