--- a/src/app/misc/messaging/messaging.component.html
+++ b/src/app/misc/messaging/messaging.component.html
@@ -18,6 +18,10 @@
       in a figure out the best way to scream and shout about your company.
     </p>
 
+    <p>
+      If you're interested in developing your brand messaging, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
