--- a/src/app/misc/photography/photography.component.html
+++ b/src/app/misc/photography/photography.component.html
@@ -12,6 +12,10 @@
       should be that lends itself to your brand.
     </p>
 
+    <p>
+      If you're interested in understanding how your photography can make a difference, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
