--- a/src/app/misc/shopify/shopify.component.html
+++ b/src/app/misc/shopify/shopify.component.html
@@ -16,6 +16,10 @@
       Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Shopify.
     </p>
 
+    <p>
+      If you're interested in building a Shopify application with us, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
