--- a/src/app/misc/tone-of-voice/tone-of-voice.component.html
+++ b/src/app/misc/tone-of-voice/tone-of-voice.component.html
@@ -17,6 +17,10 @@
       down to even the typography we choose. A very powerful tool.
     </p>
 
+    <p>
+      If you're interested in developing your tone-of-voice, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
