--- a/src/app/misc/typography/typography.component.html
+++ b/src/app/misc/typography/typography.component.html
@@ -7,6 +7,10 @@
       We take so much into account when choosing you a typeface and combination type.
     </p>
 
+    <p>
+      If you're interested exploring new typography choices, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
