--- a/src/app/misc/ux/ux.component.html
+++ b/src/app/misc/ux/ux.component.html
@@ -13,6 +13,10 @@
       <a [routerLink]="['strategy']">Strategy</a> phase of the project where we outline 'user profiles'
     </p>
 
+    <p>
+      If you're interested in putting your users first online, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
