--- a/src/app/misc/vue/vue.component.html
+++ b/src/app/misc/vue/vue.component.html
@@ -25,6 +25,10 @@
       Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Vue.
     </p>
 
+    <p>
+      If you're interested in building a Vue application with us, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
