--- a/src/app/misc/wordpress/wordpress.component.html
+++ b/src/app/misc/wordpress/wordpress.component.html
@@ -8,12 +8,16 @@
     </p>
 
     <p>
-      We've used Wordpress on many of our website because of it's simple to use interface that many of our clients have had experience in.
+      We've used <a [routerLink]="['/web-development/wordpress']">Wordpress</a> on many of our website because of it's simple to use interface that many of our clients have had experience in.
       It can even be used to build eCommerce websites so its versatility should not be undermined.
     </p>
 
     <p>
       Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with Wordpress.
+    </p>
+
+    <p>
+      If you're interested in building in CMS capability with Wordpress, get in touch.
     </p>
 
     <app-get-in-touch></app-get-in-touch>
