--- a/src/app/pages/branding/branding.component.html
+++ b/src/app/pages/branding/branding.component.html
@@ -24,6 +24,10 @@
       elements together to build your perfect brand.
     </p>
 
+    <p>
+      If your interested in developing your Brand, we'd love for you to get in touch with us.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
