--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -10,6 +10,10 @@
       possible and open your eyes to breath-taking design through composition, contrast, colour and experience.
     </p>
 
+    <p>
+      If you need a fresh style, come say hi.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
