--- a/src/app/pages/strategy/strategy.component.html
+++ b/src/app/pages/strategy/strategy.component.html
@@ -14,6 +14,10 @@
       What comes out of this is a fully fledged plan of action where everyone is clear and fully involved.
     </p>
 
+    <p>
+      If your business have some pain-points that you think we can help with, holla at us!
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
