--- a/src/app/pages/web-development/web-development.component.html
+++ b/src/app/pages/web-development/web-development.component.html
@@ -23,6 +23,10 @@
       we can build you a website where you have complete control of the content.
     </p>
 
+    <p>
+      If your digital capabilites are lacking and in need of some digital presence, get in contact.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
