--- a/src/app/misc/react/react.component.html
+++ b/src/app/misc/react/react.component.html
@@ -27,6 +27,10 @@
       Please check out <a [routerLink]="['our-work']">case studies</a> to discover what websites we have made with React.
     </p>
 
+    <p>
+      If you're interested in building a React application with us, get in touch.
+    </p>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
