--- a/src/app/pages/web-development/web-development.component.html
+++ b/src/app/pages/web-development/web-development.component.html
@@ -19,7 +19,7 @@
     </p>
 
     <p>
-      Need a <a [routerLink]="['web-development/cms]">CMS</a>? We got you covered. With our extensive Wordpress experience
+      Need a <a [routerLink]="['web-development/cms']">CMS</a>? We got you covered. With our extensive Wordpress experience
       we can build you a website where you have complete control of the content.
     </p>
 
