--- a/src/app/misc/location/location.component.html
+++ b/src/app/misc/location/location.component.html
@@ -2,18 +2,29 @@
   <section class="container-fluid">
     <a [routerLink]="['../']">< Back</a>
 
-    <h1>Jupiter and the Giraffe - {{location}}</h1>
+    <h1>Jupiter and the Giraffe<span *ngIf="type"> - {{type}}</span> - {{location}}</h1>
 
     <p>
       Our company is registered in UK and Wales but operates all over the world.
     </p>
 
     <p>
-      We bring all our services to {{location}}, be it <a [routerLink]="['/web-development']" class="link-plain">web development</a>,
-      <a [routerLink]="['/branding']" class="link-plain">branding</a> or <a [routerLink]="['/design']" class="link-plain">design</a>.
-      As always we will start with a <a [routerLink]="['/strategy']" class="link-plain">strategy workshop</a>
+      We bring all our services to {{location}}, be it <a href="https://jupiterandthegiraffe.com" class="link-plain"><span class="sr-only">{{location}}</span> web development</a>,
+      <a href="https://jupiterandthegiraffe.com" class="link-plain"><span class="sr-only">{{location}}</span> branding</a> or <a href="https://jupiterandthegiraffe.com" class="link-plain"><span class="sr-only">{{location}}</span> design</a>.
+      As always we will start with a <a href="https://jupiterandthegiraffe.com" class="link-plain"><span class="sr-only">{{location}}</span> strategy</a> workshop
       and build out your needs and solutions to your problems.
     </p>
+
+    <section *ngIf="type === 'strategy' || !type">
+      <h2>Strategy</h2>
+
+      <p>
+        This stage in the project gives us the opportunity to delve deeper into your pain points to better understand
+        your problems and pain points. We encourage you to dig deep and think about your audience and build user profiles,
+        think about your company and where you want to position it and seek your competitors to get the upper hand.
+      </p>
+
+    </section>
 
     <section *ngIf="type === 'branding' || !type">
       <h2>Branding</h2>
@@ -27,6 +38,7 @@
         <a [routerLink]="['/branding/typography']" class="link-plain">typography</a> and
         <a [routerLink]="['/design']" class="link-plain">design</a>. This all comes together to reflects your brand.
       </p>
+
     </section>
 
     <section *ngIf="type === 'design' || !type">
@@ -36,6 +48,7 @@
         The best design has the best story. We craft this through your brand and unleash it by providing a visual wrapping to
         your brand. Taking form, colour, composition and <a [routerLink]="['/ux']">UX</a>, we create beautiful designs that your users will love.
       </p>
+
     </section>
 
     <section *ngIf="type === 'webdevelopment' || !type">
@@ -48,7 +61,20 @@
         <a [routerLink]="['/web-development/wordpress']">Wordpress</a> and <a [routerLink]="['/web-development/shopify']">Shopify</a> or we can use the latest
         technologies like <a [routerLink]="['/web-development/vue']">Vue</a>, <a [routerLink]="['/web-development/angular']">Angular</a> or <a [routerLink]="['/web-development/react']">React</a>.
       </p>
+
     </section>
+
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a href="https://jupiterandthegiraffe.com">Strategy <span class="sr-only">agency</span> {{location}}</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding <span class="sr-only">agency</span> {{location}}</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design {{location}} <span class="sr-only">agency</span></a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development {{location}}</a></li>
+      </ul>
+    </section>
+
 
     <app-get-in-touch></app-get-in-touch>
   </section>
