--- a/src/app/pages/design/design.component.html
+++ b/src/app/pages/design/design.component.html
@@ -16,6 +16,17 @@
       If you need a fresh style, come say hi.
     </p>
 
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a href="https://jupiterandthegiraffe.com">Strategy</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
+      </ul>
+    </section>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
