--- a/src/app/pages/branding/branding.component.html
+++ b/src/app/pages/branding/branding.component.html
@@ -30,6 +30,17 @@
       If your interested in developing your Brand, we'd love for you to get in touch with us.
     </p>
 
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a href="https://jupiterandthegiraffe.com">Strategy</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
+      </ul>
+    </section>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
