--- a/src/app/pages/strategy/strategy.component.html
+++ b/src/app/pages/strategy/strategy.component.html
@@ -20,6 +20,17 @@
       If your business have some pain-points that you think we can help with, holla at us!
     </p>
 
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a href="https://jupiterandthegiraffe.com">Strategy</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
+      </ul>
+    </section>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
