--- a/src/app/pages/web-development/web-development.component.html
+++ b/src/app/pages/web-development/web-development.component.html
@@ -29,6 +29,17 @@
       If your digital capabilites are lacking and in need of some digital presence, get in contact.
     </p>
 
+    <section>
+      <h2>Check out our other services</h2>
+
+      <ul class="list-plain">
+        <li><a href="https://jupiterandthegiraffe.com">Strategy</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Branding Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Design Agency</a></li>
+        <li><a href="https://jupiterandthegiraffe.com">Web Development Agency</a></li>
+      </ul>
+    </section>
+
     <app-get-in-touch></app-get-in-touch>
   </section>
 </div>
