--- a/src/app/global/header/header.component.html
+++ b/src/app/global/header/header.component.html
@@ -1,20 +1,26 @@
 <header class="header" [ngClass]="{'header--show': show }">
-  <div class="container-fluid">
-    <div class="header__inner">
-      <div class="hidden-sm">
-        <span class="header__emoji" aria-hidden="true">💻</span>
-        <a [routerLink]="['/work']">View our work</a>
-      </div>
-
-      <div class="hidden-sm">
-        <span class="header__emoji" aria-hidden="true">✉️</span>
-        <a [routerLink]="['/contact']">Contact us</a>
-      </div>
-
-      <div class="hidden-sm">
-        <span class="header__emoji" aria-hidden="true">📕️</span>
-        <a href="https://blog.jupiterandthegiraffe.com">Read our blog</a>
-      </div>
-    </div>
+  <div class="header__logo hidden-sm">
+    Jupiter and <div></div>the Giraffe
   </div>
+  <ul class="header__menu list-unstyled">
+    <li class="hidden-sm">
+      <span class="header__emoji" aria-hidden="true">📖</span>
+      <a [routerLink]="['/who-we-are']">Our story</a>
+    </li>
+
+    <li class="hidden-sm">
+      <span class="header__emoji" aria-hidden="true">🧠</span>
+      <a [routerLink]="['/what-we-do']">What can we do?</a>
+    </li>
+
+    <li>
+      <span class="header__emoji" aria-hidden="true">✉️</span>
+      <a [routerLink]="['/contact']">Send transmission</a>
+    </li>
+
+    <li class="hidden-sm">
+      <span class="header__emoji" aria-hidden="true">📕️</span>
+      <a href="https://blog.jupiterandthegiraffe.com">Discover</a>
+    </li>
+  </ul>
 </header>
