--- a/src/app/global/header/header.component.scss
+++ b/src/app/global/header/header.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/sass/settings/settings";
+@import "../../../assets/sass/tools/tools";
 
 .header {
   top: -100%;
@@ -8,7 +9,14 @@
   z-index: 10;
   background-color: rgba($color-black, .9);
   backdrop-filter: blur(5px);
-  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: $space-small;
+
+  @include md {
+    padding: $space-small $space-large;
+  }
 
   &__text {
     font-family: $title-font;
@@ -21,14 +29,22 @@
     top: 0;
   }
 
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-  }
-
   &__emoji {
     display: inline-block;
     margin-right: $space-medium;
     vertical-align: middle;
+  }
+
+  &__logo {
+    font-family: $title-font;
+  }
+
+  &__menu {
+    list-style: none;
+
+    li {
+      display: inline-block;
+      margin-left: $space-large;
+    }
   }
 }
