--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,30 +1,44 @@
 <div class="hero text-center" [ngClass]="{'home-page': home}">
-  <div class="hero__logo" data-aos="fade-up" data-aos-delay="200">
-    <a [routerLink]="['/']" class="hero__link">
-      <app-logo></app-logo>
-    </a>
+  <div *ngIf="home" class="hero__logo" data-aos="fade-in" data-aos-delay="800" data-aos-duration="3000">
+    <app-logo></app-logo>
   </div>
 
-  <div class="line--top line--bottom line hero__text-wrap">
-    <div class="hero__text text-center" data-aos="fade-up" data-aos-delay="400">
-      A
-      <span *ngIf="router.url === '/'" class="hero__lead-letter">branding agency</span>
-      <a *ngIf="router.url !== '/'" class="hero__lead-letter link-plain" href="https://jupiterandthegiraffe.com">branding agency</a>
-      out of this world.
+  <div class="hero__main" *ngIf="!home">
+    <div class="hero__logo" data-aos="fade-up" data-aos-delay="200">
+      <a [routerLink]="['/']" class="hero__link">
+        <app-logo></app-logo>
+      </a>
+    </div>
+
+    <div class="line--top line--bottom line hero__text-wrap">
+      <div class="hero__text text-center" data-aos="fade-up" data-aos-delay="400">
+        A
+        <span *ngIf="router.url === '/'" class="hero__lead-letter">branding agency</span>
+        <a *ngIf="router.url !== '/'" class="hero__lead-letter link-plain" href="https://jupiterandthegiraffe.com">branding agency</a>
+        out of this world.
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-right">
+        <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="600">
+          <a [routerLink]="['/contact']" class="btn btn--lg btn--primary btn--primary-outline">Contact us</a>
+        </div>
+        <div class="padding--lg"></div>
+      </div>
+      <div class="col line line--left text-left">
+        <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="900">
+          <a [routerLink]="['/work']" class="btn btn--lg">Our work</a>
+        </div>
+        <div class="padding--lg"></div>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col text-right">
-      <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="600">
-        <a [routerLink]="['/contact']" class="btn btn--lg btn--primary btn--primary-outline">Contact us</a>
-      </div>
-      <div class="padding--lg"></div>
-    </div>
-    <div class="col line line--left text-left">
-      <div class="hero__button margin-top--lg" data-aos="zoom-out" data-aos-delay="900">
-        <a [routerLink]="['/work']" class="btn btn--lg">Our work</a>
-      </div>
-      <div class="padding--lg"></div>
+
+  <div data-aos="fade-in" data-aos-delay="200" data-aos-duration="3000" *ngIf="home">
+    <h1>Discover how brands <div></div>can move people</h1>
+    <p>Let’s create an awesome experience</p>
+    <div class="hero__button" data-aos="fade-in" data-aos-delay="1700" data-aos-duration="3000">
+      <a [routerLink]="['/work']" class="btn btn--lg">See the work</a>
     </div>
   </div>
 </div>
