--- a/src/assets/sass/utilities/_hidden.scss
+++ b/src/assets/sass/utilities/_hidden.scss
@@ -1,19 +1,19 @@
 .hidden {
   @media screen and (max-width: $screen-sm - 1) {
     &-sm {
-      display: none;
+      display: none !important;
     }
   }
 
   @media screen and (min-width: $screen-sm - 1) {
     &-sm-up {
-      display: none;
+      display: none !important;
     }
   }
 
   @media screen and (max-width: $screen-xs - 1) {
     &-xs {
-      display: none;
+      display: none !important;
     }
   }
 }
